[package]
edition = "2021"
name = "blink-crypto-rs"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chacha20poly1305 = "^0.9"
getrandom = {version = "^0.2", features = ["std"]}
blake2 = "^0.9"
chacha20 = "^0.8"
clap = "3.0.0-beta.5"

[profile.release]
# opt-level = "z"  # Optimize for size.
lto = true      # Enable Link Time Optimization.